deploy/4_ingress/1_monitoring/0_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/enable-access-log: "false"
spec:
  tls:
    - hosts:
        - grafana.hoshi-note.ixk.me
      secretName: grafana-hoshi-note-tls
  rules:
    - host: grafana.hoshi-note.ixk.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
